--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
 
 		<section class="distt col-xs-12 col-md-6"><h3><a href="solan.html">Solan</a></h3>
 		       <img class = "img-responsive" src="asset/images/home/solan.jpg">
-               <p>Solan district is one of the twelve districts of Himachal Pradesh state in northern India. Solan town is the administrative headquarters of the district. The district occupies an area of 1936 km².</p><hr>     
+               <p>Solan district is one of the twelve districts of Himachal Pradesh state in northern India. Solan town is the administrative headquarters of the district. The district occupies an area of 1936 km².<hr></p><hr>     
 		</section>
 
 
 		<section class="distt col-xs-12 col-md-6"><h3><a href="una.html">Una</a></h3>
 		      <img class = "img-responsive" src="asset/images/home/una.jpg">
               <p>Una is one of the districts of Himachal Pradesh, India, an
-               shares its border with the Hoshiarpur District and Rupnagar district of Punjab. The terrain is generally a plain with low hills.</p><hr>
+               shares its border with the Hoshiarpur District and Rupnagar district of Punjab. The terrain is generally a plain with low hills.<hr></p><hr>
 		</section>
 	
 </div>
