--- a/hamirpur.html
+++ b/hamirpur.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="asset/stylesheets/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="asset/stylesheets/distt.css">
 <script src="https://use.fontawesome.com/095466b30a.js"></script>
+</head>
+<body>
 <nav class="navbar fixed-top navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -68,8 +70,8 @@
 
 </div> 
 
-</head>
-<body>
 
+<script type="text/javascript" src ="asset/js/jquery.js"></script>
+<script type="text/javascript" src ="asset/js/bootstrap.js"></script>
 </body>
 </html>
