--- a/kinnaur.html
+++ b/kinnaur.html
@@ -86,6 +86,13 @@
   </div>
 
 </div>
+<footer class="footer">
+  <small>&copy;Himachal Pradesh</small>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="contact.html">Contact us</a>
+  </nav>
+</footer>
 
 <script type="text/javascript" src ="asset/js/jquery.js"></script>
 <script type="text/javascript" src ="asset/js/bootstrap.js"></script>
