--- a/chamba.html
+++ b/chamba.html
@@ -10,7 +10,7 @@
 <script src="https://use.fontawesome.com/095466b30a.js"></script>
 </head>
 <body>
-<nav class="navbar fixed-top navbar-default">
+<nav class="navbar navbar-fixed navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -31,11 +31,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars" aria-hidden="true"></i>   Menu <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+           <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </li>
       </ul>
