--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="slider-wrapper"><!-- innermost wrapper element -->
     <img src="asset/images/lahaul/gompa.jpg" alt="First" class="slide img-responsive" /><!-- slides -->
     <img src="asset/images/kangra/rockcut.jpg" alt="Second" class="slide img-responsive" />
-    <img src="asset/images/shimla/advanced.JPG" alt="Third" class="slide img-responsive" />
+    <img src="asset/images/shimla/advance.jpg" alt="Third" class="slide img-responsive" />
   </div>
 </div>  
 <div class="container">
