--- a/shimla.html
+++ b/shimla.html
@@ -69,7 +69,7 @@
    <p class="col-md-6  col-sm-12">The Indian Institute of Advanced Study (IIAS) is a research institute based in Shimla, India. It was set up by the Ministry of Education, Government of India in 1964 and it started functioning from 20 October 1965
 
    The building that houses the institute was originally built as a home for Lord Dufferin, Viceroy of India from 1884–1888 and was called the Viceregal Lodge.[2] It housed all the subsequent viceroys and governors general of India. It occupied Observatory Hill, one of the seven hills that Shimla is built upon. </p>
-   <img src="asset/images/shimla/advanced.JPG" class="img-responsive  col-md-6 col-sm-12">
+   <img src="asset/images/shimla/advance.jpg" class="img-responsive  col-md-6 col-sm-12">
      
    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3416.219711147524!2d77.13895751472192!3d31.103624874714377!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3905791b9dc58177%3A0x18b8334f5ca9b7d6!2sIndian+Institute+of+Advanced+Study!5e0!3m2!1sen!2sin!4v1501395959026" width="600" height="450" frameborder="0" style="border:0" allowfullscreen class=" img-responsive col-md-6 col-sm-12"></iframe>
    <p class="col-md-6 col-sm-12">The building was designed by Henry Irwin, an architect in the Public Works Department. The Viceregal Lodge had electricity as early as 1888, much before the rest of the town of Shimla.[2] The building also was equipped with a sophisticated firefighting mechanism through wax-tipped water ducts.
