--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
 
     <p>Himachal Pradesh is famous for its natural beauty, hill stations, and temples. Himachal Pradesh has been ranked fifteenth in the list of the highest per capita incomes of Indian states and union territories for year 2013-14. Many perennial rivers flow in the state, and numerous hydroelectric projects set up. Himachal produces surplus hydroelectricity and sells it to other states such as Delhi, Punjab, and Rajasthan. Hydroelectric power projects, tourism, and agriculture form important parts of the state's economy.</p>
 </div>
+<div class="container">
 <div class="slider" id="main-slider"><!-- outermost container element -->
   <div class="slider-wrapper"><!-- innermost wrapper element -->
-    <img src="asset/images/lahaul/gompa.jpg" alt="First" class="slide img-responsive" /><!-- slides -->
-    <img src="asset/images/kangra/rockcut.jpg" alt="Second" class="slide img-responsive" />
-    <img src="asset/images/shimla/advance.jpg" alt="Third" class="slide img-responsive" />
+    <img src="asset/images/lahaul/gompa.jpg" alt="First" class="slide img-responsive " /><!-- slides -->
+    <img src="asset/images/kangra/rockcut.jpg" alt="Second" class="slide img-responsive " />
+    <img src="asset/images/shimla/advance.jpg" alt="Third" class="slide img-responsive " />
   </div>
 </div>  
+</div>
 <div class="container">
 
     <section class="distt col-xs-12 col-md-6"> <h3><a href="bilaspur.html">Bilaspur</a></h3>
