--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 <div class="container">
 
     <section class="distt col-sm-12 col-md-6"> <h3><a href="bilaspur.html">Bilaspur</a></h3>
-       	       <img class = "img-responsive " src="asset/images/home/bilaspur.jpg"><br>
-               <p>Bilaspur is a district of Himachal Pradesh state, India. It contains the manmade Govind Sagar Lake on, the Sutlej River which acts as the reservoir for  the Bhakra and Nangal Dam project. The road bridge on this lake at Kandraur is highest of its kind in Asia(second highest bridge). Its headquarters are in the town of Bilaspur.<br>.<hr>
+       	       <img class="img-responsive" src="asset/images/home/bilaspur.jpg"><br>
+               <p>Bilaspur is a district of Himachal Pradesh state, India. It contains the manmade Govind Sagar Lake on, the Sutlej River which acts as the reservoir for  the Bhakra and Nangal Dam project. The road bridge on this lake at Kandraur is highest of its kind in Asia(second highest bridge). Its headquarters are in the town of Bilaspur.The district has an area of 1,167 km2 . <hr>
                </p><hr>
     </section>
 
@@ -100,7 +100,7 @@
 
 		<section class="distt col-xs-12 col-md-6"><h3><a href="lahaul.html">Lahaul and Spiti</a></h3>
 		      <img class = "img-responsive" src="asset/images/home/lahaul.jpg"><br>
-              <p>The district of Lahaul-Spiti in the Indian state of Himachal Pradesh consists of the two formerly separate districts of Lahaul and Spiti. The present administrative centre is Keylong in Lahaul. Before the two districts were merged, Kardang was the capital of Lahaul, and Dhankar the capital of Spiti. The district was formed in 1960.<br>.<hr>
+              <p>The district of Lahaul-Spiti in the Indian state of Himachal Pradesh consists of the two formerly separate districts of Lahaul and Spiti. The present administrative centre is Keylong in Lahaul. Before the two districts were merged, Kardang was the capital of Lahaul, and Dhankar the capital of Spiti. The district was formed in 1960.It is the fourth least populous district in India <hr>
               </p><hr>
 		</section>
 
